Bugfix word-wrap css class

--- a/app/src/interfacing/interface.css
+++ b/app/src/interfacing/interface.css
@@ -74,7 +74,7 @@ fieldset {
 }
 
 .wordwrap {
-    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .sortable-col {
